# SemanticRetrievalSystem

./: .gitignore  db_direct_test.py  generate_access_logs.py  install.bat  main.py  performance_analysis.py  plan.md  requirements.txt  server_monitor.py  simple_performance_analysis.py  start.bat  test_api.py  test_chromadb_api.py  test_chromadb_get.py  test_config_api.py  test_config_integration.py  test_config_save.py  test_full_config.py  test_list_collections.py  test_performance.py  test_sqlite_api.py
.lingma/rules/: Roles.md
.trae/rules/: project_rules.md
Client/: LICENSE  README.md  __init__.py  client.py  example_usage.py  exceptions.py  models.py  pyproject.toml  requirements.txt  setup.py
Documents/: BatchImportStruct.json  ImportData.md  api.md  dev.md
Test/: interactive_search.py  vectorize_and_store.py
app/api/: dependencies.py
app/api/routers/: artifacts.py  config.py  database.py  logs.py  search.py  system.py
app/core/: __init__.py  config.py  config_hot_reload.py  config_runtime.py  database.py  lightweight_database.py  logger_manager.py  table_config.py  table_operations.py  yaml_config.py
app/models/: schemas.py
app/services/: ai_clients.py  batch_import.py  vector_sync.py
app/web/frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js
app/web/frontend/src/: App.vue  main.js
app/web/static/: index.html
config/: default_config.yaml  development.yaml  table_config.yaml
config/services/: api_routes.yaml  embedding_services.yaml  llm_services.yaml
(+29 files in other folders)
