[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-retrieval-client"
version = "1.0.0"
description = "语义检索系统 Python 客户端库"
authors = [
    { name = "Semantic Retrieval System Team", email = "contact@semantic-retrieval-system.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["semantic", "retrieval", "client", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Client"
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0"
]

[project.urls]
homepage = "https://github.com/PluginsX/SemanticRetrievalSystem"
repository = "https://github.com/PluginsX/SemanticRetrievalSystem"
documentation = "https://semantic-retrieval-system.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
